# Hyperpersonalization-Fin-A-Thon

./: README.md
ML Research/: finetune_datatset.csv
ML Research/CREDIT_SCORE_SIMULATOR/: calculator.py  credit_score_simulator.py
ML Research/Chat_Bot/: Chatbot_Predictions.ipynb  chatbot_train.py  index.csv  svm_classifier_model.pkl  tfidf_vectorizer.pkl
ML Research/Expense_Categorization/: Expense_Category_Prediction.ipynb  text_classifier_model.pkl  tfidf_vectorizer_data.pkl
ML Research/Possible_CreditScore_change_reasons/: Prediction_File.ipynb  Training_File.ipynb  credit_history.csv  credit_score_model.joblib  multi_label_binarizer.joblib
mobile/: pubspec.yaml
mobile/ios/Runner/Base.lproj/: LaunchScreen.storyboard
mobile/lib/: main.dart
mobile/lib/UI/: appbar.dart  bot_button.dart  transaction_card.dart
mobile/lib/screens/: chat.dart  credit_score.dart  home.dart  landing.dart
mobile/lib/utils/: get_credit_score.dart  get_expenses.dart  get_response.dart  get_user.dart  model_definitions.dart
mobile/web/: index.html  manifest.json
mobile/web/splash/: style.css
server/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
server/core/: settings.py  urls.py
server/csv_files/: Jan_expense.csv
server/src/: admin.py  calculator.py  models.py  serializers.py  urls.py  views.py
server/src/management/commands/: load_expenses.py
server/src/migrations/: 0001_initial.py  0002_alter_user_phone_no.py  0002_creditscore_dummy_expenses_user_delete_dumy_and_more.py  0002_creditscore_expenses_user_delete_dumy_expenses_user_and_more.py
(+11 files in other folders)
