[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhijna Raghavendra <a_raghavendra@ma.iitr.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
psycopg2-binary = "^2.9.9"
django-extensions = "^3.2.3"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
